Add API method for address nonce.
